# Sanity_Tests

./: README.md  app.py  dict.py  inheti.py  learnStack.py
Outlook_testing/: .env  pyproject.toml
Outlook_testing/tests/: test_sanity.py
Outlook_testing/tests/Powerpoint/: test_create_presentation.py
Scripts/test_cases/: test1.py  test2.py
